# drawing-to-dxf

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CLEAN_AND_RUN.md  PER_PART_DXF_PLAN.md
out.dxf/: Sample_assembly_layers.dxf  Sample_manifest.json  Sample_part_101.dxf  Sample_part_10296.dxf  Sample_part_104.dxf  Sample_part_128.dxf  Sample_part_131.dxf  Sample_part_139.dxf  Sample_part_150.dxf  Sample_part_20160.dxf  Sample_part_24159.dxf  Sample_part_345.dxf  Sample_part_403.dxf  Sample_part_409.dxf  Sample_part_475.dxf  Sample_part_515.dxf  Sample_part_620.dxf  Sample_part_701.dxf  Sample_part_702.dxf  Sample_part_703.dxf  Sample_part_707.dxf  Sample_part_709.dxf  Sample_part_711.dxf  Sample_part_712.dxf  Sample_part_713.dxf  Sample_part_714.dxf  Sample_part_715.dxf  Sample_part_720.dxf  Sample_part_721.dxf  Sample_part_722.dxf  Sample_part_729.dxf  Sample_part_730.dxf  Sample_part_731.dxf  Sample_part_732.dxf  Sample_part_733.dxf  Sample_part_734.dxf  Sample_part_735.dxf  Sample_part_736.dxf  Sample_part_737.dxf  Sample_part_738.dxf  (+9 more)
out_gemini_codegen/: Sample_component_sheet.json  Sample_component_sheet.md  Sample_component_sheet_raw.txt  Sample_gemini_codegen_assembly.dxf  Sample_gemini_codegen_manifest.json  Sample_gemini_codegen_raw.txt
out_panels/: SampleOutput_autocad_mcp_recipe.json  SampleOutput_panels_manifest.json  Sample_panels_manifest.json
out_panels_smoke/: SampleOutput_panels_manifest.json
out_sample/: SampleOutput_assembly_layers.dxf  SampleOutput_manifest.json  SampleOutput_part_145.dxf  SampleOutput_part_150.dxf  SampleOutput_part_236.dxf  (+18 more)
(+183 files in other folders)
